adjust banner z-index for menu animation fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -137,3 +137,7 @@ body {
 .toast-msg {
   padding: 12px;
 }
+
+.custom-z-ind {
+  z-index: 100;
+}
